--- a/index.html
+++ b/index.html
@@ -116,63 +116,7 @@
     }
     .arcade-btn:hover {background-color: #2997ca}
 
-    .tools-overall {
-      border-style: solid;
-      border-color: white;
-      grid-column: 1 / 7;
-      grid-row: 3 / 13;
-      display: flex;
-      color: white;
-      font-family: 'DIN_MEDIUM';
-      display: grid;
-      grid-template-columns: repeat(20, 1fr);
-      grid-template-rows: repeat(200, 1fr);
-      vertical-align: middle;
-    }
-    .tools-tabsarea {
-      background-color: white;
-      grid-column: 1 / 21;
-      grid-row: 1 / 21;
-      display: flex;
-      color: black;
-      justify-content: space-around;
-      align-items: center;
-      font-size: 20px;
-      overflow: hidden;
-      overflow-x: auto;
-    }
-    .tools-renderarea {
-      background-color: rgb(20, 20, 20);
-      grid-column: 1 / 21;
-      grid-row: 21 / 200;
-      overflow: auto;
-      font-size: 15px;
-    }
-    .tools-tab{
-      background-color: #2fa9e1;
-      float: 0.33;
-      height: 100%;
-      width: 100%;
-      border: none;
-      font-family: 'DIN_MEDIUM';
-      font-size: 15px;
-      border-bottom: solid white 3px;
-      border-left: solid white 1px;
-      border-right: solid white 1px;
-    }
-    .tools-tab:hover{
-      background-color: #2997ca;
-    }
-    .tools-header {
-      background-color: white;
-      grid-column: 1 / 21;
-      grid-row: 1 / 3;
-      display: flex;
-      color: black;
-      justify-content: space-around;
-      align-items: center;
-      font-size: 16px;
-    }
+
 
     .onboardfiles-overall {
       border-style: solid;
@@ -204,6 +148,10 @@
       grid-row: 3 / 24;
       overflow: auto;
       font-size: 14px;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     /* Terminal needs a parent so that grid div is
@@ -474,6 +422,149 @@
     }
 
 
+    .tools-overall {
+      border-style: solid;
+      border-color: white;
+      grid-column: 1 / 7;
+      grid-row: 3 / 13;
+      color: white;
+      font-family: 'DIN_MEDIUM';
+      display: grid;
+      grid-template-columns: repeat(20, 1fr);
+      grid-template-rows: repeat(200, 1fr);
+      vertical-align: middle;
+      border-top: none;
+    }
+    .tools-tabsarea {
+      background-color: white;
+      grid-column: 1 / 21;
+      grid-row: 1 / 21;
+      display: flex;
+      color: black;
+      justify-content: space-around;
+      align-items: center;
+      font-size: 20px;
+      overflow: hidden;
+      overflow-x: auto;
+      border-top: none;
+      border-bottom: none;
+    }
+    .tools-renderarea {
+      background-color: rgb(0, 0, 0);
+      grid-column: 1 / 21;
+      grid-row: 21 / 202;
+      display: flex;
+      flex-direction: column;
+      overflow: none;
+      font-size: 15px;
+    }
+    .tools-tab{
+      background-color: #2fa9e1;
+      float: 0.33;
+      height: 100%;
+      width: 100%;
+      border: none;
+      font-family: 'DIN_MEDIUM';
+      font-size: 15px;
+      border-bottom: solid white 3px;
+      border-left: solid white 1px;
+      border-right: solid white 1px;
+    }
+    .tools-tab:hover{
+      background-color: #2997ca;
+    }
+    .tools-header {
+      background-color: white;
+      grid-column: 1 / 21;
+      grid-row: 1 / 3;
+      display: flex;
+      color: black;
+      justify-content: space-around;
+      align-items: center;
+      font-size: 16px;
+    }
+
+
+    .bitmapbuilder-tool-area{
+      background: #2fa9e1;
+      flex: 0.225;
+      border-top: gray 1px solid;
+      display: flex;
+      flex-direction: row;
+    }
+
+    .bitmapbuilder-tool-dimension-area{
+      background-color: green;
+      flex: 0.333333;
+      flex-direction: column;
+      display: flex;
+    }
+    .bitmapbuilder-tool-direct-dimension-parent{
+      background-color: #2fa9e1;
+      flex: 0.5;
+      border: solid 1px lightgray;
+      font-family: 'DIN_MEDIUM';
+      font-size: 13px;
+    }
+
+    
+    .bitmapbuilder-tool-modify-btn-area{
+      background-color: orangered;
+      flex: 0.333333;
+      flex-direction: column;
+      display: flex;
+    }
+    .bitmapbuilder-btns{
+      background-color: #2fa9e1;
+      flex: 0.5;
+      border: solid 1px lightgray;
+      font-family: 'DIN_MEDIUM';
+      font-size: 13px;
+    }
+    .bitmapbuilder-btns:hover{
+      background-color: #2997ca;
+    }
+
+    .bitmapbuilder-tool-hor-parent{
+      background-color: #2fa9e1;
+      flex: 0.5;
+      display: flex;
+      flex-direction: row;
+      font-family: 'DIN_MEDIUM';
+    }
+    .bitmapbuilder-tool-import-export-btn-area{
+      background-color: violet;
+      flex: 0.333333;
+      flex-direction: column;
+      display: flex;
+    }
+
+
+    .bitmapbuilder-grid-area{
+      background: #333;
+      flex: 0.775;
+      overflow: scroll;
+      display: flex;
+    }
+    .bitmapbuilder-grid {
+      width: auto;
+      height: auto;
+      margin: auto;
+      border: 1px dashed rgb(150, 150, 150);
+    }
+    td {
+      border-collapse: collapse;
+      border-spacing: 0;
+      border: none;
+      width: 28px;
+      height: 28px;
+      min-width: 28px;
+      min-height: 28px;
+    }
+    td:hover {
+      background-color: turquoise;
+    }
+
   </style>
 
   <link rel="stylesheet" href="node_modules/xterm/css/xterm.css" />
@@ -498,12 +589,50 @@
         <!-- <button id="capturetab" class="tools-tab">Emulator</button> -->
         <div id="bitmapbuilderparent" class="tools-header">Bitmap Builder</div>
       </div>
-      <div id="toolsrenderarea" class="tools-renderarea"></div>
+      <div id="toolsrenderarea" class="tools-renderarea">
+        <div id="bitmapbuildergridarea" class="bitmapbuilder-grid-area">
+          <table id="bitmapbuildergrid" class="bitmapbuilder-grid">
+            <!-- bitmap_builder.js inserts stuff here-->
+          </table>
+        </div>
+        <div id="bitmapbuildertoolarea" class="bitmapbuilder-tool-area">
+          <div id="bitmapbuildertooldimensionarea" class="bitmapbuilder-tool-dimension-area">
+
+            <div class="bitmapbuilder-tool-hor-parent">
+              <div style="flex: 0.5;padding-top: 2px;">
+                <label for="bitmapperwidth" style="float: left;color:black;font-size: 14px;margin-left: 5px;">Width: </label>
+                <label for="bitmapperheight" style="float: left;color:black;font-size: 14px;margin-left: 5px;">Height: </label>
+              </div>
+              <div style="flex: 0.5;align-items: center;">
+                <input style="font-size: 11px;width: 80%;" type="number" min="1" max="72" id="bitmapperwidth" value=8 oninput="(!validity.rangeOverflow||(value=72)) && (!validity.rangeUnderflow||(value=1)) && (!validity.stepMismatch||(value=parseInt(this.value)));">
+                <input style="font-size: 11px;width: 80%;" type="number" min="1" max="40" id="bitmapperheight" value=8 oninput="(!validity.rangeOverflow||(value=40)) && (!validity.rangeUnderflow||(value=1)) && (!validity.stepMismatch||(value=parseInt(this.value)));">
+              </div>
+            </div>
+
+            <button class="bitmapbuilder-btns" onclick="handleBitmapBuilderClicks(0)">Apply Size</button>
+          </div>
+          <div id="bitmapbuildertoolmodifybtn" class="bitmapbuilder-tool-modify-btn-area">
+            <div class="bitmapbuilder-tool-hor-parent">
+              <button class="bitmapbuilder-btns" onclick="handleBitmapBuilderClicks(1)">Z+</button>
+              <button class="bitmapbuilder-btns" onclick="handleBitmapBuilderClicks(2)">Z-</button>
+            </div>
+            
+            <div class="bitmapbuilder-tool-hor-parent">
+              <button class="bitmapbuilder-btns" onclick="handleBitmapBuilderClicks(3)">Invert</button>
+              <button class="bitmapbuilder-btns" onclick="handleBitmapBuilderClicks(4)">Clear</button>
+            </div>
+          </div>
+          <div id="bitmapbuildertoolimportexportbtnarea" class="bitmapbuilder-tool-import-export-btn-area">
+            <button class="bitmapbuilder-btns" onclick="handleBitmapBuilderClicks(5)">Import lines &larr;</button>
+            <button class="bitmapbuilder-btns" onclick="handleBitmapBuilderClicks(6)">Export to lines &rarr;</button>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div id="onboardfilesoverall" class="onboardfiles-overall">
       <div id="onboardfilesheader" class="onboardfiles-header">Thumby Filesystem View</div>
-      <div id="onboardfilesarea" class="onboardfiles-area"></div>
+      <div id="onboardfilesarea" class="onboardfiles-area">Waiting for Thumby connection...</div>
     </div>
 
     <div id="overalleditorspace" class="overall-editor-space">
@@ -555,6 +684,7 @@
   <link rel="stylesheet" href="src/treejs/treejs.css" />
   <script src="src/filesystem_wrapper.js"></script>
   <script src="src/editor_wrapper.js"></script>
+  <script src="src/bitmap_builder.js"></script>
   <script src="src/main.js" type="text/javascript" charset="utf-8"></script>
 </body>
 
