--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       /* border-style: solid; */
       /* border-color: red; */
       grid-template-columns: repeat(30, 1fr);
-      grid-template-rows: repeat(23, 1fr);
+      grid-template-rows: repeat(50, 1fr);
       grid-gap: 10px;
       margin: 5px 5px;
     }
@@ -44,7 +44,7 @@
       /* border-style: solid; */
       /* border-color: blue; */
       grid-column: 1 / 7;
-      grid-row: 1 / 3;
+      grid-row: 1 / 5;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -56,13 +56,11 @@
       display: block;
     }
 
-    .serial-btn {
+    .choose-thumby-btn {
       background-color: #2fa9e1;
-      border-style: solid;
-      border-color: white;
-      border-width: 3px;
-      grid-column: 7 / 13;
-      grid-row: 1 / 3;
+      border: white 1px solid;
+      grid-column: 7 / 11;
+      grid-row: 1 / 5;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -71,28 +69,11 @@
     }
     .serial-btn:hover {background-color: #2997ca}
 
-    .upload-btn {
-      background-color: #2fa9e1;
-      border-style: solid;
-      border-color: white;
-      border-width: 3px;
-      grid-column: 13 / 19;
-      grid-row: 1 / 3;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 22px;
-      font-family: 'DIN_REGULAR';
-    }
-    .upload-btn:hover {background-color: #2997ca}
-
     .firmware-btn {
       background-color: #2fa9e1;
-      border-style: solid;
-      border-color: white;
-      border-width: 3px;
-      grid-column: 19 / 25;
-      grid-row: 1 / 3;
+      border: white 1px solid;
+      grid-column: 11 / 15;
+      grid-row: 1 / 5;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -103,11 +84,9 @@
 
     .arcade-btn {
       background-color: #2fa9e1;
-      border-style: solid;
-      border-color: white;
-      border-width: 3px;
-      grid-column: 25 / 31;
-      grid-row: 1 / 3;
+      border: white 1px solid;
+      grid-column: 15 / 19;
+      grid-row: 1 / 5;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -119,10 +98,9 @@
 
 
     .onboardfiles-overall {
-      border-style: solid;
-      border-color: white;
+      border: white 1px solid;
       grid-column: 1 / 7;
-      grid-row: 13 / 24;
+      grid-row: 26 / 51;
       display: flex;
       color: white;
       font-family: 'DIN_MEDIUM';
@@ -159,20 +137,18 @@
     correctly */
     .terminal-style {
       background-color: black;
-      border-style: solid;
-      border-color: white;
+      border: white 1px solid;
       grid-column: 19 / 31;
-      grid-row: 3 / 24;
+      grid-row: 5 / 51;
       display: flex;
       align-items: center;
       justify-content: center;
     }
 
     .overall-editor-space {
-      border-style: solid;
-      border-color: white;
+      border: white 1px solid;
       grid-column: 7 / 19;
-      grid-row: 3 / 24;
+      grid-row: 5 / 51;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -182,13 +158,14 @@
       height: 100%;
       display: grid;
       grid-template-columns: repeat(20, 1fr);
-      grid-template-rows: repeat(23, 1fr);
+      grid-template-rows: repeat(100, 1fr);
     }
     .editor-space {
       border-style: none;
-      border-top: 2px solid white;
+      border-top: 0px solid white;
+      border-right: 0px solid white;
       grid-column: 1 / 21;
-      grid-row: 2 / 24;
+      grid-row: 6 / 96;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -196,7 +173,7 @@
 
     .tabs-parent-space{
       grid-column: 1 / 21;
-      grid-row: 1 / 2;
+      grid-row: 1 / 6;
       background-color: black;
       overflow-y: auto;
       display: flex;
@@ -231,7 +208,7 @@
       display: none;
       flex-flow: column nowrap;
       z-index: 6;
-      border: solid white 1px;
+      /* border: solid white 1px; */
       border-left: none;
     }
     
@@ -368,15 +345,13 @@
       background-color: rgba(0,0,0,0.85);
       z-index: 4;
       cursor: pointer;
-      border-style: solid;
-      border-color: rgb(0, 121, 52);
+      border: rgb(0, 121, 52) 1px solid;
       grid-template-columns: repeat(35, 1fr);
       grid-template-rows: repeat(20, 1fr);
     }
     .arcade-overlay-exit-btn{
       background-color: rgb(247, 142, 32);
-      border-style: solid;
-      border-color: rgb(0, 121, 52);
+      border: rgb(0, 121, 52) 1px solid;
       grid-column: 35 / 36;
       grid-row: 1 / 2;
       display: flex;
@@ -423,10 +398,9 @@
 
 
     .tools-overall {
-      border-style: solid;
-      border-color: white;
+      border: white 2px solid;
       grid-column: 1 / 7;
-      grid-row: 3 / 13;
+      grid-row: 5 / 26;
       color: white;
       font-family: 'DIN_MEDIUM';
       display: grid;
@@ -550,6 +524,7 @@
       width: auto;
       height: auto;
       margin: auto;
+      padding: 4px;
       border: 1px dashed rgb(150, 150, 150);
     }
     td {
@@ -560,6 +535,73 @@
       height: 28px;
       min-width: 28px;
       min-height: 28px;
+    }
+
+    .links-overall {
+      background-color: #333;
+      border: white 1px solid;
+      grid-column: 19 / 31;
+      grid-row: 1 / 5;
+      display: flex;
+    }
+    .link-child{
+      background-color: rgb(27, 27, 27);
+      color: white;
+      border: 1px solid gray;
+      flex: 0.25;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .link{
+      color: rgb(177, 177, 177);
+      font-family: 'DIN_MEDIUM';
+      font-size: 15px;
+    }
+
+
+    /* .editor-toolbar-space {
+      border: white 1px solid;
+      background-color: blue;
+      grid-column: 1 / 21;
+      grid-row: 96 / 102;
+      display: flex;
+    } */
+    .editor-toolbar-btn {
+      border-collapse: collapse;
+      border-spacing: 0;
+      background-color: black;
+      color: white;
+      border: none;
+      border: white 1px solid;
+      font-family: 'DIN_MEDIUM';
+      font-size: 15px;
+    }
+    .editor-toolbar-btn:hover {
+      background-color: gray;
+    }
+    .editor-toolbar-btn:disabled {
+        opacity: 0.3;
+    }
+    .editor-toolbar-btn-upload-execute{
+      grid-column: 1 / 7;
+      grid-row: 96 / 102;
+    }
+    .editor-toolbar-btn-upload{
+      grid-column: 7 / 11;
+      grid-row: 96 / 102;
+    }
+    .editor-toolbar-btn-execute{
+      grid-column: 11 / 15;
+      grid-row: 96 / 102;
+    }
+    .editor-toolbar-btn-zoom-plus{
+      grid-column: 15 / 18;
+      grid-row: 96 / 102;
+    }
+    .editor-toolbar-btn-zoom-minus{
+      grid-column: 18 / 23;
+      grid-row: 96 / 102;
     }
 
   </style>
@@ -574,8 +616,7 @@
     <div class="logo-img-parent">
       <img class="logo-img"src="thumby_logo.png" alt="Thumby Logo">
     </div>
-    <button class="serial-btn" onclick="buttonClickHandler(this)">Choose Thumby</button>
-    <button class="upload-btn" onclick="buttonClickHandler(this)">Upload File To Thumby</button>
+    <button id="choosethumbybtn" class="choose-thumby-btn" onclick="buttonClickHandler(this)">Choose Thumby</button>
     <button class="firmware-btn" onclick="buttonClickHandler(this)">Download Firmware</button>
     <button class="arcade-btn" onclick="buttonClickHandler(this)">Arcade</button>
     
@@ -642,12 +683,18 @@
           </div>
         </div>
 
-        <div id="editor" class="editor-space"></div>
+      <div id="editor" class="editor-space"></div>
         <div id="tabhamburgerhoverareadropdown" class="tab-hamburger-hover-area-dropdown" onmouseover="hamburgerDropdownVisibility(0)" onmouseout="hamburgerDropdownVisibility(1)">
           <button class="tab-hamburger-hover-area-btn" onclick="handleHamburgerFileButtons(this, 0)">Open File (from PC) [CTRL-O]</button>
           <button class="tab-hamburger-hover-area-btn" onclick="handleHamburgerFileButtons(this, 1)">Save Current File (to PC) [CTRL-S]</button>
           <button class="tab-hamburger-hover-area-btn" onclick="handleHamburgerFileButtons(this, 2)">Save Current File As (to PC) [CTRL-ALT-S]</button>
         </div>
+
+        <button id="uploadexecutebtn" onclick="handleEditorToolbarButtons(0)" class="editor-toolbar-btn editor-toolbar-btn-upload-execute" disabled=true>&#10162;&#x21bb; Upload & Execute</button>
+        <button id="uploadbtn" onclick="handleEditorToolbarButtons(1)" class="editor-toolbar-btn editor-toolbar-btn-upload" disabled=true>&#10162; Upload</button>
+        <button id="executebtn" onclick="handleEditorToolbarButtons(2)" class="editor-toolbar-btn editor-toolbar-btn-execute" disabled=true>&#x21bb; Execute</button>
+        <button onclick="handleEditorToolbarButtons(3)" class="editor-toolbar-btn editor-toolbar-btn-zoom-plus">Z+</button>
+        <button onclick="handleEditorToolbarButtons(4)" class="editor-toolbar-btn editor-toolbar-btn-zoom-minus">Z-</button>
       </div>
     </div>
 
@@ -668,6 +715,13 @@
       <button class="fs-rc-menu-btn" onclick="handleFileMenuButtons(this, 2)">Cut</button>
       <button class="fs-rc-menu-btn" onclick="handleFileMenuButtons(this, 1)">Copy</button> -->
       <button class="fs-rc-menu-btn" onclick="handleFileMenuButtons(this, 0)">Rename</button>
+    </div>
+
+    <div class="links-overall">
+      <div class="link-child"> <a target="_blank" href="" class="link" >Game Tutorial</a> </div>
+      <div class="link-child"> <a target="_blank" href="" class="link">Thumby GitHub</a> </div>
+      <div class="link-child"> <a target="_blank" href="http://forum.tinycircuits.com/" class="link">Forums</a> </div>
+      <div class="link-child"> <a target="_blank" href="https://tinycircuits.com/pages/contact-us" class="link">Contact Us</a> </div>
     </div>
 
   </div>
