--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
                 <button id="IDUtilites" class="header_buttons" title="Brings up menu for utilities related to firmware and page layout" onmouseover="javascript:handleUtilitesDropdown(event, 0)" onmouseout="javascript:handleUtilitesDropdown(event, 1)">Utilities&#9662</button>
             </div>
             <div class="header_links_parent">
-                <div class="header_links"> <a target="_blank" href="" class="link" >Page Tutorial</a> </div>
-                <div class="header_links"> <a target="_blank" href="" class="link" >Making a Game Tutorial</a> </div>
+                <div class="header_links"> <a target="_blank" href="https://tinycircuits.com/blogs/thumby/building-a-game-with-the-thumby-ide" class="link" >Making a Game Tutorial</a> </div>
                 <div id="IDOtherLinks" class="header_links_other" onmouseover="javascript:handleOtherLinksDropdown(event, 0)" onmouseout="javascript:handleOtherLinksDropdown(event, 1)">Other Links&#9662</div>
             </div>
         </div>
