--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
         </div>
 
 
-        <div id="IDOtherLinksMenu" class="header_utilites_menu" onmouseover="javascript:handleOtherLinksDropdown(event, 0)" onmouseout="javascript:handleOtherLinksDropdown(event, 1)">
-            <div class="header_links"> <a target="_blank" href="" class="link">Thumby GitHub</a> </div>
-            <div class="header_links"> <a target="_blank" href="http://forum.tinycircuits.com/" class="link">Forums</a> </div>
+        <div id="IDOtherLinksMenu" class="header_utilites_menu" style="height:35px" onmouseover="javascript:handleOtherLinksDropdown(event, 0)" onmouseout="javascript:handleOtherLinksDropdown(event, 1)">
             <div class="header_links"> <a target="_blank" href="https://tinycircuits.com/pages/contact-us" class="link">Contact Us</a> </div>
         </div>
 
@@ -70,6 +68,7 @@
             </div>
             <div class="header_links_parent">
                 <div class="header_links"> <a target="_blank" href="https://tinycircuits.com/blogs/thumby/building-a-game-with-the-thumby-ide" class="link" >Making a Game Tutorial</a> </div>
+                <div class="header_links"> <a target="_blank" href="http://forum.tinycircuits.com/" class="link">Forums</a> </div>
                 <div id="IDOtherLinks" class="header_links_other" onmouseover="javascript:handleOtherLinksDropdown(event, 0)" onmouseout="javascript:handleOtherLinksDropdown(event, 1)">Other Links&#9662</div>
             </div>
         </div>
