Update link html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
         <div id="IDOtherLinksMenu" class="header_utilites_menu" style="height:35px" onmouseover="javascript:handleOtherLinksDropdown(event, 0)" onmouseout="javascript:handleOtherLinksDropdown(event, 1)">
-            <div class="header_links"> <a target="_blank" href="https://tinycircuits.com/pages/contact-us" class="link">Contact Us</a> </div>
+            <div class="header_links" style="flex: 1"> <a target="_blank" href="https://tinycircuits.com/pages/contact-us" class="link">Contact Us</a> </div>
         </div>
 
 
