Add button to Thumby API

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                 <div class="header_link_space">
                     <div class="uk-button-group uk-width-1-1 uk-height-1-1">
                         <button uk-tooltip="delay: 500; pos: bottom-left; offset: 0; title: Opens link in new tab" onclick="window.open('https://tinycircuits.com/blogs/thumby/building-a-game-with-the-thumby-ide', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1">Tutorial</button>
+                        <button uk-tooltip="delay: 500; pos: bottom-left; offset: 0; title: Opens link in new tab" onclick="window.open('https://github.com/TinyCircuits/tinycircuits.github.io/blob/master/ThumbyAPI.md', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1">Thumby API</button>
                         <button uk-tooltip="delay: 500; pos: bottom-left; offset: 0; title: Opens link in new tab" onclick="window.open('https://thumby.us/', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 link_button">Thumby Website</button>
                         
                         <button class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 link_button" type="button">Other Links&#9662</button>
