--- a/testing/index.html
+++ b/testing/index.html
@@ -59,7 +59,7 @@
                                 <li class="uk-nav-divider"></li>
 
                                 <button title="Buttons for adding back any panel" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1">Widgets&#9662</button>
-                                <div uk-dropdown="offset: 0">
+                                <div uk-dropdown="offset: 0; mode: click">
                                     <ul class="uk-nav uk-dropdown-nav">
                                         <li><button title="Adds a code editor panel" id="IDAddEditorBTN" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-nowrap uk-text-left">+ Editor</button></li>
                                         <!-- <li class="uk-nav-divider"></li> -->
