Add version number based on date in top left of page and do not override editor background colors

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 
                     </div>
                 </div>
+                <button class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 link_button">Version: 10.28.2021</button>
 
             </div>
             <div id="IDLayoutContainer" class="layout_container"></div>
