--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                                 <li><button uk-tooltip="delay: 500; pos: bottom-left; offset: 0; title: Opens link in new tab" onclick="window.open('https://tinycircuits.com/pages/contact-us', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 link_button" style="height:40px">Contact Us</button></li>
                             </ul>
                         </div>
+                        <button class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 link_button">Version: 10.28.2021_1</button>
 
                     </div>
                 </div>
-                <button class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 link_button">Version: 10.28.2021</button>
 
             </div>
             <div id="IDLayoutContainer" class="layout_container"></div>
