--- a/testing/index.html
+++ b/testing/index.html
@@ -94,6 +94,7 @@
                                 <li><button title="Opens link in new tab" onclick="window.open('https://tinycircuits.com/pages/contact-us', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 link_button" style="height:40px">Contact Us</button></li>
                             </ul>
                         </div>
+                        <button class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 link_button">Version: 10.29.2021_1</button>
 
                     </div>
                 </div>
