testing: work on arcade

--- a/testing/index.html
+++ b/testing/index.html
@@ -21,6 +21,7 @@
         <link rel="stylesheet" href="css/dark/shell-dark.css">
         <link rel="stylesheet" href="css/dark/editor-dark.css">
         <link rel="stylesheet" href="css/dark/emulator-dark.css">
+        <link rel="stylesheet" href="css/dark/arcade.css">
 
         <link rel="stylesheet" href="js/treejs/treejs.css" />
 
@@ -76,6 +77,9 @@
                             </ul>
                         </div>
 
+
+                        <button id="IDArcadeBTN" style="background-color: rgb(51, 35, 51);" title="Opens overlay for browsing community made games" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-small uk-text-nowrap">Arcade</button>
+
                     </div>
                 </div>
 
@@ -125,6 +129,7 @@
         <script src="js/active_terminal_wrapper.js"></script>
         <script src="js/bitmap_builder.js"></script>
         <script src="js/repl.js"></script>
+        <script src="js/arcade.js"></script>
         <script type="module" src="golden-layout/bundle/esm/golden-layout.js"></script>
         <script type="module" src="js/main.js"></script>
     </body>
