testing: add recording to emulator

--- a/testing/index.html
+++ b/testing/index.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" href="css/dark/shell-dark.css">
         <link rel="stylesheet" href="css/dark/editor-dark.css">
         <link rel="stylesheet" href="css/dark/emulator-dark.css">
-        <link rel="stylesheet" href="css/dark/arcade.css">
+        <link rel="stylesheet" href="css/dark/arcade-dark.css">
 
         <link rel="stylesheet" href="js/treejs/treejs.css" />
 
