--- a/testing/index.html
+++ b/testing/index.html
@@ -32,8 +32,16 @@
     </head>
 
     <body>
+
         <div id="IDPageWrapper" class="page_wrapper">
             <div id="IDPageHeader" class="header">
+                <video controls width="250" autoplay="true" muted="true" style="z-index: 10000">
+
+                    <source src="https://raw.githubusercontent.com/TinyCircuits/TinyCircuits-Thumby-Games/master/TinyBlocks/arcade_title_video.webm"
+                            type="video/webm">
+                
+                    Sorry, your browser doesn't support embedded videos.
+                </video>
 
                 <div class="header_logo_space">
                     <img id="logo" src="css/thumby_logo-light.png" width="150" height="" alt="Thumby Logo" uk-img>
@@ -78,7 +86,7 @@
                         </div>
 
 
-                        <button id="IDArcadeBTN" style="background-color: rgb(51, 35, 51);" title="Opens overlay for browsing community made games" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-small uk-text-nowrap">Arcade</button>
+                        <button id="IDArcadeBTN" title="Opens overlay for browsing community made games" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-small uk-text-nowrap">Arcade</button>
 
                     </div>
                 </div>
