Add small features

--- a/testing/index.html
+++ b/testing/index.html
@@ -21,6 +21,7 @@
         <link rel="stylesheet" href="css/dark/shell-dark.css">
         <link rel="stylesheet" href="css/dark/editor-dark.css">
         <link rel="stylesheet" href="css/dark/emulator-dark.css">
+        <link rel="stylesheet" href="css/dark/changelog-dark.css">
         <link rel="stylesheet" href="css/dark/arcade-dark.css">
 
         <link rel="stylesheet" href="js/treejs/treejs.css" />
@@ -32,6 +33,11 @@
     </head>
 
     <body>
+
+        <div id="IDChangelog" class="changelog">
+            <button id="IDChnagelogExitBtn" class="changelog_exit_btn" uk-icon="icon: close"></button>
+            <div id="IDChangelogText" class="changelog_text"></div>
+        </div>
 
         <div id="IDPageWrapper" class="page_wrapper">
             <div id="IDPageHeader" class="header">
@@ -50,6 +56,8 @@
                         <button id="IDConnectThumbyBTN" title="Connect Thumby to page manually, or automatically if connected before" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-small uk-text-nowrap" uk-icon="shrink">Connect Thumby</button>
                         <button id="IDDisconnectThumbyBTN" title="Disconnect Thumby from page" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-small uk-text-nowrap" uk-icon="expand">Disconnect Thumby</button>
                         <button id="IDNewGameBTN" title="Generates file structure needed for getting a game to show up on the Thumby start-up screen" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-small uk-text-nowrap">Make New Game</button>
+
+                        <button id="IDArcadeBTN" title="Opens overlay for browsing community made games" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-small uk-text-nowrap">Arcade</button>
 
                         <button id="IDUtilites" title="Common utilities for firmware, page layout, page state, theme, and widgets" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-small uk-text-nowrap" type="button">Utilities&#9662</button>
                         <div id="IDUtilitesDropdown" uk-dropdown="offset: 0; mode: click; delay-hide: 200">
@@ -77,10 +85,6 @@
 
                             </ul>
                         </div>
-
-
-                        <button id="IDArcadeBTN" title="Opens overlay for browsing community made games" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-small uk-text-nowrap">Arcade</button>
-
                     </div>
                 </div>
 
@@ -88,18 +92,19 @@
                     <div class="uk-button-group uk-width-1-1 uk-height-1-1">
                         <button title="Opens link in new tab" onclick="window.open('https://tinycircuits.com/blogs/thumby/building-a-game-with-the-thumby-ide', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1">Tutorial</button>
                         <button title="Opens link in new tab" onclick="window.open('https://github.com/TinyCircuits/tinycircuits.github.io/blob/master/ThumbyAPI.md', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1">Thumby API</button>
-                        <button title="Opens link in new tab" onclick="window.open('https://thumby.us/', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 link_button">Thumby Website</button>
-                        
+                        <button title="Opens link in new tab" onclick="window.open('https://github.com/TinyCircuits/TinyCircuits-Thumby-Games', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 link_button">Add Game To Arcade</button>
+
                         <button class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 link_button" type="button">Other Links&#9662</button>
                         <div uk-dropdown="offset: 0; delay-hide: 200">
                             <ul class="uk-nav uk-dropdown-nav">
+                                <button title="Opens link in new tab" onclick="window.open('https://thumby.us/', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 link_button" style="height:40px">Thumby Website</button>
                                 <li><button title="Opens link in new tab. Found a bug with the page? Report it!" onclick="window.open('https://github.com/TinyCircuits/tinycircuits.github.io/issues', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 link_button" style="height:40px">Report a bug</button></li>
                                 <li><button title="Opens link in new tab" onclick="window.open('http://forum.tinycircuits.com/index.php', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 link_button" style="height:40px">Forums</button></li>
                                 <li><button title="Opens link in new tab" onclick="window.open('https://tinycircuits.com/', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 link_button" style="height:40px">Store</button></li>
                                 <li><button title="Opens link in new tab" onclick="window.open('https://tinycircuits.com/pages/contact-us', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 link_button" style="height:40px">Contact Us</button></li>
                             </ul>
                         </div>
-                        <button class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 link_button">Version: 11.09.2021_1</button>
+                        <button class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 link_button">Version: 11.15.2021_1</button>
 
                     </div>
                 </div>
